<resources>
    <string name="app_name">TheMovieApp</string>
    <string name="popular_movies">Popular movies</string>
    <string name="top_rated_movies">Top rated movies</string>
    <string name="original_title">Original title: </string>
    <string name="plot_synopsis">Plot synopsis: </string>
    <string name="user_rating">User rating: </string>
    <string name="release_date">Release date: </string>
    <string name="movie_info">About movie</string>
    <string name="error_message">Failed to load. Try again later</string>
    <string name="movie_poster">Movie poster</string>
</resources>
