<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_color"
    tools:context="com.example.android.themovieapp.activities.MovieInfoActivity"
    tools:ignore="Overdraw">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/movie_poster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/movie_poster"
                android:padding="10dp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/original_title_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/original_title"
                android:textColor="@color/app_font_color"
                android:textStyle="bold"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/original_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/app_font_color"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/plot_synopsis_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/plot_synopsis"
                android:textColor="@color/app_font_color"
                android:textStyle="bold"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/plot_synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/app_font_color"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/user_rating_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/user_rating"
                android:textColor="@color/app_font_color"
                android:textStyle="bold"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/user_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/app_font_color"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/release_date_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/release_date"
                android:textColor="@color/app_font_color"
                android:textStyle="bold"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/release_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/app_font_color"
                android:visibility="invisible" />
        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/tv_error_message_display"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:text="@string/error_message"
        android:textColor="@color/app_font_color"
        android:textSize="22sp"
        android:visibility="invisible" />

    <ProgressBar
        android:id="@+id/pb_loading_indicator"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:visibility="invisible" />

</FrameLayout>
